@@ -1225,6 +1225,12 @@ Wed Mar  6 10:40:28 CET 2002
 Sun Mar 10 13:08:22 CET 2002
 
 	- Fixed two bugs in define command in lexer.
+
+Thu Mar 21 08:25:08 CET 2002
+
+	- Applied patch by Nicolas Bazin <nbazin@ingenico.com.au> for improved
+	  typedef handling.
+	- Added option '-c' to automatically create C typedef from SQL one.
 	- Set ecpg version to 2.10.0.
 	- Set library version to 3.4.0.
 
